--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # ----> Remove # comment
 
-#VITE_BACKEND_SERVER="http://your_backend_url_server.com/"
-#PROD = false
+VITE_BACKEND_SERVER=http://34.123.229.149:8000/
+PROD =true
+VITE_DEV_REMOTE=remote
