--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # ----> Remove # comment
 
-VITE_BACKEND_SERVER=http://34.123.229.149:8000/
+VITE_BACKEND_SERVER=https://uditchauhan.com/
 PROD=true
 VITE_DEV_REMOTE=remote
