--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-# ----> Remove # comment
-
-VITE_BACKEND_SERVER=https://uditchauhan.com/
+VITE_BACKEND_SERVER=http://34.123.229.149:8001/
 PROD=true
 VITE_DEV_REMOTE=remote
