--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_BACKEND_SERVER=https://uditchauhan.com/
-PROD=true
-VITE_DEV_REMOTE=remote
+# VITE_BACKEND_SERVER=https://uditchauhan.com/
+# PROD=true
+# VITE_DEV_REMOTE=remote
