--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-VITE_BACKEND_SERVER=https://uditchauhan.com/
-PROD=true
-VITE_DEV_REMOTE=remote
-JWT_SECRET= "testjwttoken"
-
+# VITE_BACKEND_SERVER=https://uditchauhan.com/
+# PROD=true
+# VITE_DEV_REMOTE=remote
+# JWT_SECRET= "testjwttoken"
